--- a/lab4.Rmd
+++ b/lab4.Rmd
@@ -97,4 +97,32 @@ cat("Negative: ", negative / count, "%")
 
 ```
 
+# Задание 4
+## User-friendly проверка гипотез согласия
+
+Написать функцию, которая на вход принимает выборку и уровень значимости, проверяет согласованность выборки с распределением из вашего варианта, а на выход выдает текст в стиле "при заданном уровне значимости 0.05 гипотеза о принадлежности выборки к нормальному закону распределения принимается/отвергается".
+
+```{r task4, echo=FALSE}
+
+my.test <- function(x, p) {
+  res <- ks.test(x, "pnorm", 0, 2) 
+  print(res)
+  if (res[2] < p) {
+    res.str <- "отвергается"
+  } else {
+    res.str <- "принимается"  
+  }
+  
+  cat("При заданном уровне значимости ", p, "гипотеза о принадлежности выборки к нормальному закону распределения", res.str)
+}
+
+print("rnorm(100, 0, 2)", "0.1")
+my.test(rnorm(100, 0, 2), 0.1)
+print("rexp(100, 2)", "0.1")
+my.test(rexp(100, 2), 0.1)
+print("runif(100, 0, 1)", "0.1")
+my.test(runif(100, 0, 1), 0.1)
+
+```
+
 ## References
